# Backend-101

./: README.md
Email-Service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
Email-Service/app/: main.py
Email-Service/app/api/: __init__.py  email.py  routes.py  webhook.py
Email-Service/app/core/: celery.py  config.py  logging.py  redis.py
Email-Service/app/db/: async_session.py  base.py  sync_session.py
Email-Service/app/middlewares/: idempotency.py  rate_limiter.py
Email-Service/app/models/: email.py
Email-Service/app/repository/: email.py
Email-Service/app/schemas/: email.py
Email-Service/app/tasks/: email_tasks.py
Email-Service/app/utils/: email.py  redis.py
Rate-Limiter/: .env.example  docker-compose.yml  pyproject.toml  redis-atomicity.md
Rate-Limiter/app/: main.py
Rate-Limiter/app/api/: routes.py
Rate-Limiter/app/core/: config.py  redis.py
Rate-Limiter/app/rate_limiter/: base.py  dependency.py  factory.py  schemas.py
Rate-Limiter/app/rate_limiter/strategies/: __init__.py  fixed_window.py  sliding_window.py  token_bucket.py
Rate-Limiter/app/tests/: conftest.py  test_ratelimiters.py
Redis-Caching/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Redis-Caching/app/: main.py
Redis-Caching/app/api/: routes.py
Redis-Caching/app/core/: config.py
Redis-Caching/app/models/: mixins.py  product.py
Redis-Caching/app/repository/: product.py
Redis-Caching/app/schemas/: product.py
Redis-Caching/app/utils/: redis.py
