[project]
name = "Email-Service"
version = "0.1.0"
description = "FastAPI-based email sending service using Celery and Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.0",
    "orjson>=3.11.8",
    "redis[hiredis]>=6.4.0",
    "resend>=2.29.0",
    "sqlalchemy[asyncio]>=2.0.49",
]
