[project]
name = "Rate-Limiter"
version = "0.1.0"
description = "FastAPI-based rate limiter using Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "redis[hiredis]>=7.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-v -ra -s"
testpaths = ["app/tests"]
markers = [
    "integration: marks tests that require external services",
]
