[project]
name = "Redis-Caching"
version = "0.1.0"
description = "FastAPI-based caching solution using Redis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.3",
    "orjson>=3.11.8",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
]
